// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test simple array 1`] = `
Object {
  "errorMessage": "Should have at least 3 items.",
  "isValid": false,
  "items": Array [
    Object {
      "errorMessage": "",
      "isValid": true,
    },
    Object {
      "errorMessage": "",
      "isValid": true,
    },
  ],
}
`;

exports[`Test simple array values 1`] = `
Object {
  "errorMessage": "Should have at least 3 items.",
  "isValid": false,
  "items": Array [
    Object {
      "errorMessage": "Should be at least 5 characters.",
      "isValid": false,
    },
    Object {
      "errorMessage": "",
      "isValid": true,
    },
  ],
}
`;
